--- a/HW7_SPI_DAC/SPI.X/nbproject/Makefile-genesis.properties
+++ b/HW7_SPI_DAC/SPI.X/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Wed Apr 28 17:42:33 CDT 2021
+#Fri Apr 30 13:00:06 CDT 2021
 default.languagetoolchain.version=2.50
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC32MX_DFP\\1.3.231
 conf.ids=default
@@ -8,5 +8,5 @@ host.id=30sa-lu7h-jw
 configurations-xml=bf371fe509581b20fc2b30844ca9d913
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=10848bd240cfb6abc7d759fdffba8dbe
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=C\:\\Users\\nmark\\Documents\\GitHub\\ME433\\HW7_SPI\\SPI.X
+proj.dir=C\:\\Users\\nmark\\Documents\\GitHub\\ME433\\HW7_SPI_DAC\\SPI.X
 host.platform=windows
