--- a/combo/combo.X/nbproject/Makefile-genesis.properties
+++ b/combo/combo.X/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Sat May 08 22:13:57 CDT 2021
+#Fri Jun 18 13:46:57 CDT 2021
 default.languagetoolchain.version=2.50
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\PIC32MX_DFP\\1.3.231
 conf.ids=default
@@ -8,5 +8,5 @@ host.id=30sa-lu7h-jw
 configurations-xml=0e6a2b9b560b177754ed45325728ca99
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=10848bd240cfb6abc7d759fdffba8dbe
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
-proj.dir=C\:\\Users\\nmark\\Documents\\GitHub\\ME433\\HW10_neopixel\\Neopixel.X
+proj.dir=C\:\\Users\\nmark\\Documents\\GitHub\\ME433\\combo\\combo.X
 host.platform=windows
